# Test-FindOpenCL

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: Consumption.yaml
tests/: CMakeLists.txt
tests/Component/HeadersCppLoader/UseImported/: CMakeLists.txt
tests/Component/HeadersLoader/UseImported/: CMakeLists.txt
tests/Component/HeadersLoader/UseVariables/: CMakeLists.txt  UseHeaders.c
tests/Component/HeadersOnly/UseImported/: CMakeLists.txt
tests/Component/HeadersOnly/UseVariables/: CMakeLists.txt
tests/Component/Utils/UseImported/: CMakeLists.txt  UseUtils.c
tests/Component/UtilsCpp/UseImported/: CMakeLists.txt  UseUtils.cpp
tests/NoComponent/UseImported/: CMakeLists.txt
tests/NoComponent/UseVariables/: CMakeLists.txt  UseLoader.c
